# lexica

./: Cargo.toml  LICENSE  README.md
benchmarks/: compilation.lx
examples/: factorial.lx  fibonacci.lx  increment.lx  irreversible.lx  structure.lx  syntax.lx  unicode.lx
examples/mathematics/: main.lx
src/: context.rs  intrinsic.rs  main.rs  source.rs  span.rs
src/basic/: basic.rs  block.rs  branch.rs  conditional.rs  context.rs  expression.rs  function.rs  item.rs  mod.rs  node.rs  pattern.rs  statement.rs  unit.rs  value.rs
src/compiler/: constructor.rs  element.rs  mod.rs  node_construct.rs  translation_map.rs  translator.rs
src/declaration/: block.rs  construct.rs  context.rs  declaration.rs  inclusion.rs  mod.rs  module.rs  parser.rs  path.rs
src/display/: mod.rs
src/driver/: compile.rs  execute.rs  interface.rs  mod.rs  translate.rs
src/error/: display.rs  error.rs  mod.rs
src/evaluation/: binding.rs  context.rs  evaluation.rs  frame.rs  item.rs  mod.rs  mutation.rs  partial.rs  value.rs
src/extension/: indent.rs  mod.rs  string.rs  traverse.rs
src/inference/: engine.rs  environment.rs  expression.rs  function.rs  inference.rs  intrinsic.rs  mod.rs  pattern.rs  type_context.rs  type_register.rs
src/interface/: command.rs  function.rs  interface.rs  mod.rs
src/interpreter/: call_frame.rs  comparator.rs  compilation_unit.rs  context.rs  dependency_buffer.rs  direction.rs  drop_stack.rs  error.rs  float.rs  function.rs  function_label.rs  instruction.rs  integer.rs  local_table.rs  mod.rs  node_construct.rs  operation.rs  primitive.rs  (+5 more)
(+164 files in other folders)
