[package]
name = "lexica"
version = "0.1.0"
authors = ["Techno-coder <8334328+Techno-coder@users.noreply.github.com>"]
edition = "2018"

[dependencies]
byteorder = "^1.3"
colored = "^1.7"
polytype = "6.0"

[dependencies.clap]
version = "^2.0"
default-features = false
features = ["suggestions", "color"]
